--- a/css/style.css
+++ b/css/style.css
@@ -84,3 +84,13 @@ img {
 .menu-nav a:hover{
   color: #122ab2;
 }
+
+/*Brief*/
+
+.brief {
+  font-size: 3em;
+  line-height: 1;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 10px;
+}
