--- a/brafe_1_grid/css/style.css
+++ b/brafe_1_grid/css/style.css
@@ -23,12 +23,35 @@ img {
 
 .menu {
 	background: #252525;
+	padding: 15px 0;
+}
+
+.menu-nav ul {
+	float: right;
+}
+
+.menu-nav ul li {
+	display: inline-block;
 }
 
 .menu-nav a {
 	text-decoration: none;
 	color: #fff;
 	font-size: 1.125em;
+	display: block;
+	padding: 10px;
+	margin-left: 10px;
+}
+
+@media (max-width: 739px) {
+	.menu-nav ul {
+		float: none;
+	}
+	.menu-nav ul li a {
+		margin-left: 0px;
+		padding-left: 0px;
+		padding-right: 8px;
+	}
 }
 
 /* Intro */
@@ -37,6 +60,8 @@ img {
 	background: url('../img/bg-intro.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
+	padding: 150px 0;
+	text-align: center;
 }
 
 .intro h1 {
@@ -50,6 +75,7 @@ img {
 	width: 20px;
 	height: 4px;
 	background: #fff;
+	margin: 10px auto;
 }
 
 .intro p {
@@ -57,10 +83,22 @@ img {
 	font-size: 1.125em;
 }
 
+@media (max-width: 739px) {
+	.intro {
+		padding: 60px 0;
+	}
+}
+
 /* About */
+
+.about {
+	padding: 60px 0;
+}
 
 .about h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 60px;
 }
 
 .about-item h3 {
@@ -72,12 +110,18 @@ img {
 	font-weight: normal;
 	text-align: center;
 	position: relative;
+	width: 220px;
+	padding: 5px 0 10px 0;
+	top: -25px;
 }
 
 .about > p {
 	font-size: 1.125em;
 	line-height: 1.4em;
 	font-style: italic;
+	max-width: 460px;
+	margin: 20px auto;
+	text-align: center;
 }
 
 /* Products */
@@ -86,10 +130,17 @@ img {
 	background: #e7e4d8;
 	border-top: 3px solid #d6d3c8;
 	border-bottom: 3px solid #d6d3c8;
+	padding: 60px 0;
+}
+
+.products-item {
+	margin-bottom: 40px;
 }
 
 .products-item h2 {
 	font-size: 2.25em;
+	text-align: center;
+	margin-bottom: 20px;
 }
 
 .products-item h2::before {
@@ -101,6 +152,7 @@ img {
 	border-radius: 50%;
 	border: 5px solid #e7e4d8;
 	box-shadow: 0 0 0 5px currentColor;
+	margin: 20px auto;
 }
 
 h2.products-paulista::before {
@@ -128,17 +180,32 @@ h2.products-mineiro::before {
 	font-size: 1.125em;
 	font-weight: bold;
 	text-transform: uppercase;
+	display: block;
+	width: 180px;
+	padding: 15px 0;
+	margin: 0 auto;
 }
 
 /* Places */
 
+.places {
+	padding: 60px 0;
+}
+
+.places-item {
+	margin-bottom: 40px;
+}
+
 .places-item h2 {
 	font-size: 2.25em;
+	margin-bottom: 20px;
 }
 
 .places-item p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+	max-width: 320px;
+	margin-bottom: 40px;
 }
 
 .places-item a {
@@ -147,12 +214,14 @@ h2.products-mineiro::before {
 	text-decoration: none;
 	border: 3px solid;
 	color: #252525;
+	padding: 10px 20px;
 }
 
 /* Newsletter */
 
 .newsletter {
 	background: #e7e4d8;
+	padding: 30px 0;
 }
 
 .newsletter-info h2 {
@@ -174,6 +243,10 @@ h2.products-mineiro::before {
 	font-size: 1.5em;
 	font-style: italic;
 	font-family: Georgia, serif;
+	width: calc(100% - 140px);
+	padding: 10px;
+	float: left;
+
 }
 
 .newsletter button {
@@ -184,15 +257,29 @@ h2.products-mineiro::before {
 	font-size: 1.5em;
 	color: #fff;
 	cursor: pointer;
+	width: 140px;
+	padding: 13px 0;
 }
 
 /*Footer*/
 
 .footer {
 	background: #d6d3c8;
+	padding: 40px 0;
+}
+
+.footer img {
+	float: right;
 }
 
 .footer p {
 	font-size: 1.125em;
 	line-height: 1.4em;
+}
+
+@media (max-width: 739px) {
+	.footer img {
+		float: none;
+		margin-top: 20px;
+	}
 }
